--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,57 +1,37 @@
 apply plugin: 'com.android.application'
-apply plugin: 'android-apt'
 
 android {
-    signingConfigs {
-        release {
-            keyAlias 'mei'
-            keyPassword 'mei123!@#'
-            storeFile file('../keystore/mei.keystore.jks')
-            storePassword 'mei123!@#'
-        }
-    }
-    compileSdkVersion 24
-    buildToolsVersion '25.0.0'
+    compileSdkVersion 28
+    buildToolsVersion '28.0.3'
     defaultConfig {
         applicationId "com.naver.mei.sample"
         minSdkVersion 16
-        targetSdkVersion 24
+        targetSdkVersion 28
         versionCode 1
         versionName "1.0"
-    }
-
-    signingConfigs {
-        release {
-            keyAlias 'mei'
-            keyPassword 'mei123!@#'
-            storeFile file('../keystore/mei.keystore.jks')
-            storePassword 'mei123!@#'
-        }
     }
 
     buildTypes {
         debug {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
-            signingConfig signingConfigs.release
         }
         release {
             minifyEnabled true
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro', 'proguard-fresco.pro'
-            signingConfig signingConfigs.release
         }
     }
 }
 
 dependencies {
-    compile fileTree(include: ['*.jar'], dir: 'libs')
-    compile project(':mei-sdk')
-    compile 'com.android.support:recyclerview-v7:24.2.1'
-    compile 'com.android.support:appcompat-v7:24.2.1'
-    compile 'com.jakewharton:butterknife:8.4.0'
-    compile 'com.android.support:design:24.2.1'
-    compile 'com.facebook.fresco:animated-gif:0.14.1'
-    compile 'com.facebook.fresco:fresco:0.14.1'
-    compile 'com.github.clans:fab:1.6.2'
-    apt 'com.jakewharton:butterknife-compiler:8.4.0'
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
+    implementation project(':mei-sdk')
+    implementation 'com.android.support:recyclerview-v7:28.0.0'
+    implementation 'com.android.support:appcompat-v7:28.0.0'
+    implementation 'com.jakewharton:butterknife:8.4.0'
+    implementation 'com.android.support:design:28.0.0'
+    implementation 'com.facebook.fresco:animated-gif:0.14.1'
+    implementation 'com.facebook.fresco:fresco:0.14.1'
+    implementation 'com.github.clans:fab:1.6.2'
+    annotationProcessor 'com.jakewharton:butterknife-compiler:8.4.0'
 }
