--- a/build.gradle
+++ b/build.gradle
@@ -6,10 +6,7 @@ buildscript {
         google()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.2.0'
-
-        // NOTE: Do not place your application dependencies here; they belong
-        // in the individual module build.gradle files
+        classpath 'com.android.tools.build:gradle:3.2.1'
         classpath 'com.neenbedankt.gradle.plugins:android-apt:1.8'
     }
 }
@@ -17,6 +14,7 @@ buildscript {
 allprojects {
     repositories {
         jcenter()
+        google()
         tasks.withType(Javadoc).all {
             enabled = false
         }
